# RIP-AV

./: .gitignore  AV_out_eval_metrics.py  DRIVE_Evalution.py  HRF_Evalution.py  README.md  loss.py  main.py  opt_UKBB.py  pyproject.toml  test_ukbb.py
AV/: loss.py  main.py  opt.py  test_with_vis.py
AV/Preprocessing/: generate_bd_map.py  generate_cmap_base_label.py  generate_patch_selection.py  generate_patch_selection_for_RIP.py
AV/Tools/: AVclassifiationMetrics.py  Float2Uint.py  ImageResize.py  Remove_small_holes.py  data_augmentation.py  evalution_vessel.py  global2patch_AND_patch2global.py  utils.py
AV/config/: config_test_general.py  config_train_general.py
AV/lib/: Utils.py  extract_patches2.py
AV/models/: layers.py  network.py  networks_gan.py  sw_gan.py
Preprocessing/: generate_patch_selection.py
RIP/: class_indices.json  data.py  loss.py  network_multi_label.py  train.py  utils.py
Tools/: AVclassifiationMetrics.py  BGR2RGB.py  BinaryPostProcessing.py  DiskParameters_DRIVE_Test.xls  DiskParameters_DRIVE_Train.xls  DiskParameters_INSPIRE_resize.xls  FakePad.py  HRF_DiscParameter.csv  HRF_DiscParameter.xls  Im2Double.py  ImageResize.py  Standardize.py  centerline_evaluation.py  data_augmentation.py  utils.py  warmup.py
config/: config_test_general.py  config_train_general.py
lib/: IlluminationCorrection.py  Utils.py
models/: layers.py  network.py  resnet.py  sw_gan.py  swin.py
